[package]
name = "cast-interop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

alloy-dyn-abi = "0.7"
alloy-json-abi = "0.7"
alloy-primitives = "0.7"
alloy-provider = { version = "0.7", features = ["reqwest"] }
alloy-rpc-types = "0.7"
alloy-signer = "0.7"
alloy-signer-wallet = "0.7"
alloy-sol-types = "0.7"
alloy-transport-http = "0.7"
