[package]
name = "cast-interop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }


alloy-dyn-abi = "1.3.0"
alloy-json-abi = "1.3.0"
alloy-primitives = "1.3.0"
alloy-provider = { version = "1.3.0", features = ["reqwest"] }
alloy-rpc-types = "1.3.0"
alloy-signer = "1.3.0"
alloy-sol-types = "1.3.0"
alloy-transport-http = "1.3.0"
